{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 11,
  "lineage": "5ae20070-8926-bdf6-4028-608791c3587d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09614b637b5dc9ac0",
            "arn": "arn:aws:ec2:us-east-1:027419661768:elastic-ip/eipalloc-09614b637b5dc9ac0",
            "domain": "vpc",
            "id": "eipalloc-09614b637b5dc9ac0",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-223-228-81.compute-1.amazonaws.com",
            "public_ip": "3.223.228.81",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "myproject-prod-eip-1"
            },
            "tags_all": {
              "Name": "myproject-prod-eip-1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:027419661768:internet-gateway/igw-0d05f2f7feedcafc7",
            "id": "igw-0d05f2f7feedcafc7",
            "owner_id": "027419661768",
            "region": "us-east-1",
            "tags": {
              "Name": "myproject-prod-igw"
            },
            "tags_all": {
              "Name": "myproject-prod-igw"
            },
            "vpc_id": "vpc-011c071d6c337c407"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09614b637b5dc9ac0",
            "association_id": "eipassoc-044b0bc0f9ebe61ff",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0386836831078c794",
            "network_interface_id": "eni-0081406d048d01fed",
            "private_ip": "10.0.1.103",
            "public_ip": "3.223.228.81",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f485528f206ba0da",
            "tags": {
              "Name": "myproject-prod-nat-1"
            },
            "tags_all": {
              "Name": "myproject-prod-nat-1"
            },
            "vpc_id": "vpc-011c071d6c337c407"
          },
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:027419661768:route-table/rtb-0181aec35f029d5a2",
            "id": "rtb-0181aec35f029d5a2",
            "owner_id": "027419661768",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0386836831078c794",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myproject-prod-private-rt-1"
            },
            "tags_all": {
              "Name": "myproject-prod-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-011c071d6c337c407"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:027419661768:route-table/rtb-012700b0ac555b492",
            "id": "rtb-012700b0ac555b492",
            "owner_id": "027419661768",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d05f2f7feedcafc7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myproject-prod-public-rt"
            },
            "tags_all": {
              "Name": "myproject-prod-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-011c071d6c337c407"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0765e8e0ef3616af7",
            "region": "us-east-1",
            "route_table_id": "rtb-0181aec35f029d5a2",
            "subnet_id": "subnet-0370849aee4176e0e"
          },
          "dependencies": [
            "aws_eip.nat_eips",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073cb974d7310623d",
            "region": "us-east-1",
            "route_table_id": "rtb-012700b0ac555b492",
            "subnet_id": "subnet-0f485528f206ba0da"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:027419661768:subnet/subnet-0370849aee4176e0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0370849aee4176e0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "027419661768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "myproject-prod-private-1"
            },
            "tags_all": {
              "Name": "myproject-prod-private-1"
            },
            "vpc_id": "vpc-011c071d6c337c407"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:027419661768:subnet/subnet-0f485528f206ba0da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f485528f206ba0da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "027419661768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "myproject-prod-public-1"
            },
            "tags_all": {
              "Name": "myproject-prod-public-1"
            },
            "vpc_id": "vpc-011c071d6c337c407"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:027419661768:vpc/vpc-011c071d6c337c407",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c1bb3d0baf3b1e31",
            "default_route_table_id": "rtb-09043f3b8c167d2e7",
            "default_security_group_id": "sg-0311c21e55dcbc960",
            "dhcp_options_id": "dopt-095e0eb28290add04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-011c071d6c337c407",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09043f3b8c167d2e7",
            "owner_id": "027419661768",
            "region": "us-east-1",
            "tags": {
              "Environment": "prod",
              "Name": "myproject-prod-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "myproject-prod-vpc"
            }
          }
        }
      ]
    }
  ]
}